--- a/service/fancypenosi/web/public/style/navigator.css
+++ b/service/fancypenosi/web/public/style/navigator.css
@@ -21,6 +21,11 @@
     align-items: center;
 }
 
+#drawer {
+    display: none;
+    justify-content: space-between;
+}
+
 .account-action {
     text-decoration-line: underline;
 }
