--- a/service/fancypenosi/web/partial/navigator.html
+++ b/service/fancypenosi/web/partial/navigator.html
@@ -6,14 +6,18 @@
     </div>
 </div>
 
-<div id="drawer" style="display: none;">
-    <div>tools</div>
-    {{ if .authorized }}
-    <button class="account-action" id="sign-out">sign out</button>
-    {{ else }}
+<div id="drawer">
     <div>
-        <button class="account-action" onclick='fadeTo("/sign-in")'>sign in</button> /
-        <button class="account-action" onclick='fadeTo("/sign-up")'>sign up</button>
+        <div>tools</div>
     </div>
-    {{ end }}
+    <div>
+        {{ if .authorized }}
+        <button class="account-action" id="sign-out">sign out</button>
+        {{ else }}
+        <div>
+            <button class="account-action" onclick='fadeTo("/sign-in")'>sign in</button> /
+            <button class="account-action" onclick='fadeTo("/sign-up")'>sign up</button>
+        </div>
+        {{ end }}
+    </div>
 </div>
