--- a/service/fancypenosi/web/partial/navigator.html
+++ b/service/fancypenosi/web/partial/navigator.html
@@ -7,17 +7,18 @@
 </div>
 
 <div id="drawer">
-    <div>
-        <div>tools</div>
+    <div id="services">
+        <h1>Services</h1>
+        <a onclick='fadeTo("#")'>Kanban</a>
+        <a>Bookmarks</a>
     </div>
-    <div>
+    <div id="account-actions">
         {{ if .authorized }}
         <button class="account-action" id="sign-out">sign out</button>
         {{ else }}
-        <div>
-            <button class="account-action" onclick='fadeTo("/sign-in")'>sign in</button> /
-            <button class="account-action" onclick='fadeTo("/sign-up")'>sign up</button>
-        </div>
+        <button class="account-action" onclick='fadeTo("/sign-in")'>sign in</button>
+        <span>/</span>
+        <button class="account-action" onclick='fadeTo("/sign-up")'>sign up</button>
         {{ end }}
     </div>
 </div>
