--- a/service/elonbust/web/public/style/main.css
+++ b/service/elonbust/web/public/style/main.css
@@ -534,3 +534,19 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.flex {
+  display: flex;
+}
+
+.h-full {
+  height: 100%;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
