--- a/service/fancypenosi/web/public/style/navigator.css
+++ b/service/fancypenosi/web/public/style/navigator.css
@@ -14,7 +14,8 @@
 
 #menu-btn {
     --ggs: 1.5;
-    height: 30px; /* todo: use rem? */
+    height: 30px;
+    /* todo: use rem? */
     width: 30px;
     display: flex;
     justify-content: center;
@@ -23,9 +24,16 @@
 }
 
 #drawer {
-    display: none;
+    transition-property: height;
+    transition-duration: 500ms;
+    /* height: auto; */
+    height: 0px;
+    overflow: hidden;
+}
+
+#drawer-content {
+    display: flex;
     justify-content: space-between;
-    padding-top: 0.5rem;
 }
 
 #services {
@@ -41,20 +49,52 @@
     cursor: pointer;
 }
 
+#services span:hover {
+    text-decoration: underline;
+}
+
 .account-actions {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
 }
 
-.account-action {
-    text-decoration-line: underline;
+.account-actions button {
+    padding: 0.25rem;
+    border: 1px solid;
+}
+
+#sign-in-btn {
+    background-color: rgb(7 89 133);
+    border-color: rgb(14 165 233);
+}
+
+#sign-in-btn:hover {
+    background-color: rgb(12 74 110);
+}
+
+#sign-up-btn {
+    background-color: rgb(22 101 52);
+    border-color: rgb(34 197 94);
+}
+
+#sign-up-btn:hover {
+    background-color: rgb(20 83 45);
+}
+
+#sign-out-btn {
+    background-color: rgb(107 33 168);
+    border-color: rgb(168 85 247);
+}
+
+#sign-out-btn:hover {
+    background-color: rgb(88 28 135);
 }
 
 /* icon */
 
 .gg-menu {
-    transform: scale(var(--ggs, 1))
+    transform: scale(var(--ggs, 1));
 }
 
 .gg-menu,
