--- a/service/fancypenosi/web/public/style/navigator.css
+++ b/service/fancypenosi/web/public/style/navigator.css
@@ -1,4 +1,6 @@
 #navigator {
+    position: fixed;
+    width: 100%;
     background-color: rgb(15 23 42);
     border-bottom: 1px solid rgb(14, 165, 233);
     padding-left: 1rem;
