--- a/service/fancypenosi/web/partial/navigator.html
+++ b/service/fancypenosi/web/partial/navigator.html
@@ -1,3 +1,4 @@
+{{ define "navigator" }}
 <div id="toolbar">
     <div></div>
     <div id="menu-btn" class="collapsed" onclick="toggleNavDrawer(event)">
@@ -23,3 +24,4 @@
         </div>
     </div>
 </div>
+{{ end }}
