--- a/service/elonbust/web/partial/kanban.html
+++ b/service/elonbust/web/partial/kanban.html
@@ -1,12 +1,10 @@
 {{ define "kanban" }}
-
 <button id="{{ .Id }}" class="flex justify-between p-2 bg-slate-700 hover:bg-slate-800 outline outline-1 outline-slate-500">
     <span class="font-bold">
-        {{ .Name | asdf }}
+        {{ .Name }}
     </span>
     <span class="italic">
-        Created: {{ .CreatedAt }}
+        Created: {{ .CreatedAt | asTime | asRfc822 }}
     </span>
 </button>
-
 {{ end }}
