--- a/service/fancypenosi/web/partial/navigator.html
+++ b/service/fancypenosi/web/partial/navigator.html
@@ -4,7 +4,7 @@
         <i class="gg-coffee"></i>
     </div>
     {{if .auth.Authenticated}}
-    <div class="nav-btn" onclick='fadeTo("/account")'>
+    <div class="nav-btn" onclick='fadeTo(`${fancypenosiUrl}/account`)'>
         <i class="gg-user"></i>
     </div>
     {{else}}
