--- a/service/brynhildr/tailwind.css
+++ b/service/brynhildr/tailwind.css
@@ -1,4 +1,83 @@
 @tailwind base;
+
+@layer base {
+    input {
+        @apply bg-transparent;
+    }
+}
+
 @tailwind components;
 @tailwind utilities;
 
+/*
+ * icons
+ */
+
+/* globe */
+
+.gg-globe-alt,
+.gg-globe-alt::after,
+.gg-globe-alt::before {
+ display: block;
+ box-sizing: border-box;
+ height: 18px;
+ border: 2px solid
+}
+
+.gg-globe-alt {
+ position: relative;
+ transform: scale(var(--ggs,1));
+ width: 18px;
+ border-radius: 22px
+}
+
+.gg-globe-alt::after,
+.gg-globe-alt::before {
+ content: "";
+ position: absolute;
+ width: 8px;
+ border-radius: 100%;
+ top: -2px;
+ left: 3px
+}
+
+.gg-globe-alt::after {
+ width: 24px;
+ height: 20px;
+ border: 2px solid transparent;
+ border-bottom: 2px solid;
+ top: -11px;
+ left: -5px
+} 
+
+/* close */
+
+.gg-close {
+ box-sizing: border-box;
+ position: relative;
+ display: block;
+ transform: scale(var(--ggs,1));
+ width: 22px;
+ height: 22px;
+ border: 2px solid transparent;
+ border-radius: 40px
+}
+
+.gg-close::after,
+.gg-close::before {
+ content: "";
+ display: block;
+ box-sizing: border-box;
+ position: absolute;
+ width: 16px;
+ height: 2px;
+ background: currentColor;
+ transform: rotate(45deg);
+ border-radius: 5px;
+ top: 8px;
+ left: 1px
+}
+
+.gg-close::after {
+ transform: rotate(-45deg)
+} 
