--- a/service/brynhildr/web/public/style/main.css
+++ b/service/brynhildr/web/public/style/main.css
@@ -562,12 +562,20 @@ input {
   height: 100%;
 }
 
+.h-\[18px\] {
+  height: 18px;
+}
+
 .w-\[200px\] {
   width: 200px;
 }
 
 .w-full {
   width: 100%;
+}
+
+.w-\[18px\] {
+  width: 18px;
 }
 
 .min-w-\[200px\] {
@@ -620,6 +628,10 @@ input {
   border-color: rgb(59 130 246 / var(--tw-border-opacity));
 }
 
+.border-transparent {
+  border-color: transparent;
+}
+
 .border-b-slate-500 {
   --tw-border-opacity: 1;
   border-bottom-color: rgb(100 116 139 / var(--tw-border-opacity));
@@ -638,6 +650,11 @@ input {
   border-top-color: transparent;
 }
 
+.border-l-slate-500 {
+  --tw-border-opacity: 1;
+  border-left-color: rgb(100 116 139 / var(--tw-border-opacity));
+}
+
 .bg-green-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(22 101 52 / var(--tw-bg-opacity));
@@ -651,6 +668,11 @@ input {
 .bg-blue-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+}
+
+.bg-slate-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
 }
 
 .p-2 {
@@ -669,6 +691,10 @@ input {
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
+}
+
+.uppercase {
+  text-transform: uppercase;
 }
 
 .text-slate-500 {
