--- a/service/brynhildr/tailwind.css
+++ b/service/brynhildr/tailwind.css
@@ -9,6 +9,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.sidebar-icon {
+    --ggs: 1.5;
+}
+
 /*
  * icons
  */
@@ -80,4 +84,70 @@
 
 .gg-close::after {
  transform: rotate(-45deg)
+} 
+
+/* bookmark */
+
+.gg-bookmark,
+.gg-bookmark::after {
+ display: block;
+ box-sizing: border-box;
+ border-top-right-radius: 3px
+}
+
+.gg-bookmark {
+ border: 2px solid;
+ border-bottom: 0;
+ border-top-left-radius: 3px;
+ overflow: hidden;
+ position: relative;
+ transform: scale(var(--ggs,1));
+ width: 14px;
+ height: 16px
+}
+
+.gg-bookmark::after {
+ content: "";
+ position: absolute;
+ width: 12px;
+ height: 12px;
+ border-top: 2px solid;
+ border-right: 2px solid;
+ transform: rotate(-45deg);
+ top: 9px;
+ left: -1px
+} 
+
+/* add */
+
+.gg-add-r {
+ box-sizing: border-box;
+ position: relative;
+ display: block;
+ width: 22px;
+ height: 22px;
+ border: 2px solid;
+ transform: scale(var(--ggs,1));
+ border-radius: 4px
+}
+
+.gg-add-r::after,
+.gg-add-r::before {
+ content: "";
+ display: block;
+ box-sizing: border-box;
+ position: absolute;
+ width: 10px;
+ height: 2px;
+ background: currentColor;
+ border-radius: 5px;
+ top: 8px;
+ left: 4px
+}
+
+.gg-add-r::after {
+ width: 2px;
+ height: 10px;
+ top: 4px;
+ left: 8px
 } 
